# GABRIEL-distribution

./: .gitignore  README.md  api_test.ipynb  basic_classifier.py  clean_datasets.py  county_counter.py  faceless.py  faceless_prompt.jinja2  passage_coder.py  passage_viewer.py  pyproject.toml  regional.py  regional_analysis_prompt.jinja2  run_regional.ipynb  setup.py  utility_functions.py
Datasets/Formality Scores/: formality_scores.csv
Datasets/Global Populism/: GPD_20190625.csv  gpd_v2_20220427.csv
Datasets/GoodNewsEveryone/: gne-release-v1.0.tsv
Datasets/Humicroedit/: humicroedit.csv
Datasets/MBIC/: annotations.xlsx  annotators.csv  labeled_dataset.xlsx
Datasets/MINT/: preprocess_train.csv
Datasets/PERSUADE 2.0/: persuade_corpus_2.0_sample.csv
GABRIEL/: MANIFEST.in  archangel.py  combined_assistant.py  decorators.py  elo_ratings_code.py  foundational_functions.py  library_test.ipynb  openai_api_calls.py  prompt_wrapping.py  teleprompter.py  temp.csv
GABRIEL_ratings.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Gabriel_2/: combined_assistant.py  foundational_functions.py  openai_api_calls.py  prompt_wrapping.py  running.py
Prompts/: ratings_prompt.j2
docs/: README.md
examples/: README.md  library_stress_test.ipynb  run_regional_library.ipynb
legacy/: README_v0.md  openai_utils_aug4_save.py
legacy_v0/: MANIFEST.in  elo_rater.py  faceless.py  faceless_prompt.jinja2  generic_elo_prompt.jinja2  utility_functions.py
tests/: conftest.py  test_basic.py  test_clean_json_df.py  test_colab_viewer.py  test_imports.py  test_parsing.py
(+64 files in other folders)
