[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "gabriel"
version = "0.1.0"
description = "LLM-based social-science analysis library"
authors = [{name = "GABRIEL Contributors", email = ""}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "pandas>=1.0.0",
    "numpy>=1.18.0",
    "Jinja2>=3.0.0",
    "tqdm>=4.40.0",
    "aiohttp>=3.7.0",
    "aiolimiter>=1.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/gabriel"]

[tool.hatch.build]
include = ["src/gabriel/prompts/*.jinja2", "src/gabriel/prompts/*.yaml"]
