[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "gabriel"
version = "0.1.0"
description = "LLM-based social-science analysis library"
authors = [{name = "GABRIEL Contributors"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "pandas>=1.0.0",
    "numpy>=1.18.0",
    "Jinja2>=3.0.0",
    "tqdm>=4.40.0",
    "aiohttp>=3.7.0",
    "aiolimiter>=1.0.0",
    "plotly>=5.0.0",
    "requests>=2.0.0",
    "scipy>=1.8.0",
    "tiktoken>=0.2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gabriel*"]

[tool.setuptools.package-data]
"gabriel.prompts" = ["*.jinja2"]
